<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_map"
        android:enabled="true"
        android:icon="@drawable/ic_map_black_48dp"
        android:title="@string/bottom_navigation_menu_android"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_list"
        android:enabled="true"
        android:icon="@drawable/ic_view_list_black_48dp"
        android:title="@string/bottom_navigation_menu_logos"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_wormates"
        android:enabled="true"
        android:icon="@drawable/ic_people_black_48dp"
        android:title="@string/bottom_navigation_menu_landscape"
        app:showAsAction="ifRoom" />
</menu>