<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/connexion_activity_relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.lucas.go4lunch.Controllers.Activities.LoginActivity">

    <!-- MAIN CONTAINER -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <!-- IMAGE VIEW FIREBASE OC -->
        <ImageView
            android:id="@+id/connexion_img"
            android:layout_width="150dp"
            android:layout_height="137dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_logo" />

        <!-- TITLE FIREBASE OC -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="75dp"
            android:textStyle="bold" />

        <!-- DESCRIPTION FIREBASE OC -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/default_text_size"
            android:text="@string/main_activity_description"
            android:textStyle="italic"
            android:textColor="@android:color/white"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- BUTTON LOGIN EMAIL -->
            <Button
                android:layout_weight="1"
                android:id="@+id/main_activity_button_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_email"
                android:textColor="#000"
                android:textSize="@dimen/default_text_size"
                android:background="@drawable/button_facebook_connexion"
                android:backgroundTint="@color/white"
                style="?android:attr/borderlessButtonStyle"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                />

            <!-- BUTTON LOGIN FACEBOOK -->
            <Button
                android:layout_weight="1"
                android:id="@+id/main_activity_button_login_facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_facebook"
                android:textColor="#fff"
                android:textSize="@dimen/default_text_size"
                android:background="@drawable/button_facebook_connexion"
                style="?android:attr/borderlessButtonStyle"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                />

            <!-- BUTTON LOGIN GOOGLE -->
            <Button
                android:layout_weight="1"
                android:id="@+id/main_activity_button_login_google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_google"
                android:textColor="#fff"
                android:textSize="@dimen/default_text_size"
                android:background="@drawable/button_google_connexion"
                style="?android:attr/borderlessButtonStyle"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                />

            <!-- BUTTON LOGIN TWITTER -->
            <Button
                android:layout_weight="1"
                android:id="@+id/main_activity_button_login_twitter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_twitter"
                android:textColor="#fff"
                android:textSize="@dimen/default_text_size"
                android:background="@drawable/button_google_connexion"
                android:backgroundTint="@color/blueTwitter"
                style="?android:attr/borderlessButtonStyle"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="40dp"
                />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
