<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- TITTLE -->

    <TextView
        android:id="@+id/settings_title_userSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="@android:color/black"
        android:textSize="18dp"
        android:textStyle="bold"
        android:text="@string/title_user_setting"/>

    <!-- CHANGE USERNAME VIEW -->

    <RelativeLayout
        android:id="@+id/changeUsernam_view"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_title_userSetting"
        android:padding="15dp"
        android:background="?android:attr/selectableItemBackground">

        <ImageView
            android:id="@+id/img_changeUsernam"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_create_black_48dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="40dp"
            android:layout_toRightOf="@+id/img_changeUsernam"
            android:textSize="17dp"
            android:textColor="@android:color/black"
            android:text="@string/change_username"/>

    </RelativeLayout>

    <!-- CHANGE PROFILE PICTURE VIEW -->

    <RelativeLayout
        android:id="@+id/changeProfilePicture_view"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/changeUsernam_view"
        android:padding="15dp"
        android:background="?android:attr/selectableItemBackground">

        <ImageView
            android:id="@+id/img_chageProfilePicture"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_account_circle_black_48dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="40dp"
            android:layout_toRightOf="@+id/img_chageProfilePicture"
            android:textSize="17dp"
            android:textColor="@android:color/black"
            android:text="@string/change_profile_picture"/>

    </RelativeLayout>

    <!-- DELETE ACCOUNT -->

    <RelativeLayout
        android:id="@+id/deleteAccount_view"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/changeProfilePicture_view"
        android:padding="15dp"
        android:background="?android:attr/selectableItemBackground">

        <ImageView
            android:id="@+id/img_deleteAccount"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_delete_forever_black_48dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="40dp"
            android:layout_toRightOf="@+id/img_deleteAccount"
            android:textSize="17dp"
            android:textColor="@android:color/black"
            android:text="@string/delete_account_title"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorSeparation"
        android:layout_below="@+id/deleteAccount_view"/>

</RelativeLayout>